--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "swiper": "^5.4.5",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-lazyload": "^1.3.4",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -20,6 +21,7 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
