--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@better-scroll/core": "^2.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-resize-detector": "^1.2.4",
     "swiper": "^5.4.5",
     "vue": "^2.6.14",
     "vue-awesome-swiper": "^4.1.1",
