--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.4.2",
+    "@better-scroll/observe-dom": "^2.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-resize-detector": "^1.2.4",
