--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-awesome-swiper": "^4.1.1",
     "vue-lazyload": "^1.3.4",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
